<resources>
    <string name="app_name">Digital Restaurang Meny</string>
    <string name="text_kimchi">KIMCHI</string>
    <string name="text_korean_street_food">KOREAN RESTAURANG</string>
    <string name="text_simply_delicious">Simply delicious!</string>
    <string name="employee">employee</string>
    <string name="main_dishes_1">Bibimbab\n129kr</string>
    <string name="main_dishes_2">Pumpa soppa\n59kr</string>
    <string name="main_dishes_3">Patbingsu\n69kr</string>
    <string name="desserts_1">Desserts 1</string>
    <string name="desserts_2">Desserts 2</string>
    <string name="desserts_3">Desserts 3</string>
    <string name="appetizer_1">Appetizer 1</string>
    <string name="appetizer_2">Appetizer 2</string>
    <string name="appetizer_3">Appetizer 3</string>
    <string name="bibimbab">Bibimbab</string>
    <string name="pumpasoppa">Pumpasoppa</string>
    <string name="patbingsu">Patbingsu</string>
    <string name="pumpasoppa_description">pumpa, sötpotatis, klibbigt ris pulver, salt, vatten</string>
    <string name="bibimbab_description">ris, nötkött, spenat, morot, gul lök, zucchini, shiitake, böngroddar, gurka, kimchi, sallad, ägg, gochudjang </string>
    <string name="patbingsu_description">bruna bönor, is, kondenserad mjölk, tteok(mochi), gelé, annans, jordgubbar, körsbär, mango, chokladsås</string>
    <string name="welcome_message">Welcome to Restaurang KIMCHI!</string>
    <string name="desserts">Desserts</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="appetizers">Appetizers</string>
</resources>