<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_black"
    tools:context=".MainActivity">

        <!-- restaurang name text -->
        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/text_kimchi"
            android:textSize="@dimen/font_extra_large"
            android:textColor="@color/red_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- restaurang sub name text -->
        <TextView
            android:id="@+id/title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_korean_street_food"
            android:textSize="@dimen/font_small"
            android:textColor="@color/red_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- restaurang sub-sub name text -->
        <TextView
            android:id="@+id/title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_simply_delicious"
            android:textStyle="italic"
            android:textSize="@dimen/font_small"
            android:textColor="@color/red_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- menu button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

                <!-- appetizers button -->
                <Button
                    android:id="@+id/appetizers_button"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_60dp"
                    android:layout_weight="1"
                    android:text="@string/appetizers"
                    android:textSize="@dimen/font_small"
                    android:background="@color/red_orange"
                    android:textColor="@color/light_black"
                    android:layout_margin="@dimen/_1dp">
                </Button>

                <!-- main dishes -->
                <Button
                    android:id="@+id/main_dishes_button"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_60dp"
                    android:layout_weight="1"
                    android:text="@string/main_dishes"
                    android:textSize="@dimen/font_small"
                    android:background="@color/red_orange"
                    android:textColor="@color/light_black"
                    android:layout_margin="@dimen/_1dp">
                </Button>

                <!-- desserts button -->
                <Button
                    android:id="@+id/desserts_button"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_60dp"
                    android:layout_weight="1"
                    android:text="@string/desserts"
                    android:textSize="@dimen/font_small"
                    android:background="@color/red_orange"
                    android:textColor="@color/light_black"
                    android:layout_margin="@dimen/_1dp">
                </Button>
        </LinearLayout>

        <!-- welcome text -->
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220dp"
            android:text="@string/welcome_message"
            android:textColor="@color/red_orange"
            android:gravity="center"
            android:textSize="@dimen/_30sp">
        </TextView>

</LinearLayout>