<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_small">

        <androidx.cardview.widget.CardView
            android:id="@+id/main_dish_card_view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_extra_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bibimbab_picture"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/bibimbap" />

                <TextView
                    android:id="@+id/main_dishes_text_view_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_pink"
                    android:padding="@dimen/margin_large"
                    android:text="@string/main_dishes_1"
                    android:textColor="@color/light_black">
                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_dish_card_view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_dish_card_view_1"
            android:layout_margin="@dimen/margin_extra_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bulgogi_picture"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/bibimbap"/>

                <TextView
                    android:id="@+id/main_dishes_text_view_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_pink"
                    android:padding="@dimen/margin_large"
                    android:text="@string/main_dishes_2"
                    android:textColor="@color/light_black">
                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_dish_card_view_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_dish_card_view_2"
            android:layout_margin="@dimen/margin_extra_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/samgyeopsal_picture"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/bibimbap"/>

                <TextView
                    android:id="@+id/main_dishes_text_view_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_pink"
                    android:padding="@dimen/margin_large"
                    android:text="@string/main_dishes_3"
                    android:textColor="@color/light_black">
            </TextView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>